tests/unit/default/syntax-error/159-alter-table-dot-name.e.t
---- IN ----
*%table.name
---- OUT ----
---- ERR ----
syntax: expected `:` or `=>` after `...table.name` instead of EOL at position 12 - at line 1
---- EXIT ----
1
